@@ -6,4 +6,4 @@
 
 MOD_UNREAD=mod_unread
 THIS MODULE SHOWS A LIST OF UNREAD ITEMS=This Module shows a list of unread mail messages
-
+MOD_UNREAD_MESSAGES= %d Messages
