@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.0.0">
+<install
+	type="module"
+	version="1.6.0">
 	<name>Title</name>
 	<author>Joomla! Project</author>
 	<creationDate>Nov 2005</creationDate>
@@ -10,7 +12,8 @@
 	<version>1.6.0</version>
 	<description>This module shows the toolbar component title</description>
 	<files>
-		<filename module="mod_toolbar">mod_toolbar.php</filename>
+		<filename
+			module="mod_toolbar">mod_toolbar.php</filename>
 	</files>
 	<fields
 		group="advanced">
