@@ -2,7 +2,7 @@
 /**
  * @version		$Id$
  * @package		Joomla.Administrator
- * @subpackage	mod_title
+ * @subpackage	mod_toolbar
  * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
@@ -10,7 +10,5 @@
 // No direct access.
 defined('_JEXEC') or die;
 
-// Get the component title div
-$title = JFactory::getApplication()->get('JComponentTitle');
-
-require JModuleHelper::getLayoutPath('mod_title', $params->get('layout', 'default'));
+// Echo the toolbar.
+echo $toolbar;
